crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_report_overlay.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ 1 Rename trait ──────────────────────────────────────────────── 3/4 selected · 3 files ┐
│ Language → new name▏                                                                   │
└ src/lang/mod.rs:64 · type a new name ──────────────────────────────────────────────────┘
┌ 2 ? Unverified ───────────── 1/1 · 1 file ┐┌ 5 Source · src/other.rs:10 ───────────────┐
│  src/other.rs                             ││ ∅ unresolved · a bare name nothing        │
│> ▫ 10 Language::new()                     ││ imports, or a path vvv cannot place       │
│                                           ││ Loading source                            │
┌ report ────────────────────────────────────────────────────────────────────────────────┐
│rename Config → Settings                                                                │
│                                                                                        │
│src/a.rs                                                                                │
│                                                                                        │
│✓ #3  2 files                                                                           │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ 3 ✓ Safe ────────────────── 1/3 · 3 files ┐│                                           │
│  src/lang/mod.rs                          ││                                           │
│  ▪ 64 pub trait Language: Send + Sync {   ││                                           │
└ 3/3 selected ─────────────────────────────┘│                                           │
 4 ✗ Other ─────────────────── 0/0 · 0 files └ excluded from apply ──────────────────────┘
 rename j/k row  e editor  any key close                                          f1 help
