crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_rewrite.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ Rewrite ─────────────────────────────────────────────────────── 4/4 selected · 3 files ┐
│ template: Lang                                                                         │
└ pattern: Language · ready to apply ────────────────────────────────────────────────────┘
┌ Matches ───────────────────────────── 2/4 ┐┌ Diff · src/lang/registry.rs:4 ────────────┐
│  src/lang/mod.rs                          ││@@ -1,6 +1,6 @@                            │
│  ▪ 64 pub trait Language: Send + Sync {   ││ // line 1                                 │
│  src/lang/registry.rs                     ││ // line 2                                 │
│> ▪  4 use super::{Language, LanguageId};  ││ // line 3                                 │
│  src/lib.rs                               ││-use super::{Language, LanguageId};        │
│  ▪ 26 pub use lang::{Language, LanguageId…││+use super::{Lang, LanguageId};            │
│  ▪ 41 Language::new()                     ││ // line 5                                 │
│                                           ││ // line 6                                 │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└ 4/4 selected ─────────────────────────────┘└ selected ─────────────────────────────────┘
 rewrite j/k move  space toggle  a all  ⏎ apply 4 in 3 files  esc back  v view    f1 help
