crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_rewrite_detailed.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ 1 Rewrite ───────────────────────────────────────────────────── 4/4 selected · 3 files ┐
│ template: Lang                                                                         │
└ pattern: Language · ready to apply ────────────────────────────────────────────────────┘
┌ 2 Matches ─────────────────────────── 2/4 ┐┌ 3 Diff · src/lang/registry.rs:4 ──────────┐
│  src/lang/mod.rs                          ││@@ -1,6 +1,6 @@                            │
│  ▪ 1. 64 pub trait Language: Send + Sync {││ // line 1                                 │
│  src/lang/registry.rs                     ││ // line 2                                 │
│> ▪ 2.  4 use super::{Language, LanguageId…││ // line 3                                 │
│  src/lib.rs                               ││-use super::{Language, LanguageId};        │
│  ▪ 3. 26 pub use lang::{Language, Languag…││+use super::{Lang, LanguageId};            │
│  ▪ 4. 41 Language::new()                  ││ // line 5                                 │
│                                           ││ // line 6                                 │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└ 4/4 selected ─────────────────────────────┘└ selected ─────────────────────────────────┘
 rewrite space toggle  a all  ⏎ apply 4 in 3 files  esc back  j/k move            f1 help
