crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_search.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ─────────────────────────────────────────────────────── ● 1  ○ 3  3 files ┐
│> Language                                                                              │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ results ──────────────────────────────────┐┌ lang/mod.rs ──────────────────────────────┐
│● lang/mod.rs:64         trait Language    ││   59 │ // line 59                         │
│→ lang/registry.rs:4     use super::{Langu…││   60 │ // line 60                         │
│→ src/lib.rs:26          pub use lang::{La…││   61 │ // line 61                         │
│  src/lib.rs:41          Language::new()   ││   62 │ // line 62                         │
│                                           ││   63 │ // line 63                         │
│                                           ││   64 │ pub trait Language: Send + Sync {  │
└───────────────────────────────────────────┘│   65 │     fn name(&self) -> &str;        │
┌ definition ───────────────────────────────┐│   66 │     fn extensions(&self) -> &[&str…│
│ pub trait Language: Send + Sync {         ││   67 │ }                                  │
│     fn name(&self) -> &str;               ││   68 │ // line 68                         │
│     fn extensions(&self) -> &[&str];      ││   69 │ // line 69                         │
│ }                                         ││   70 │ // line 70                         │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
 search r rename  m/M move file/symbol  w rewrite  o declaration  s kind  L lang  h histor
