crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_search_anchored.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ──────────────────────────────── ● trait Language  ✓ 3  ? 1  ✗ 0  3 files ┐
│> Language                                                                              │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ ●  trait Language ────────────────────────┐┌ lang/mod.rs ──────────────────────────────┐
│✓ safe 3  3 files                          ││   59 │ // line 59                         │
│● lang/mod.rs:64         pub trait Languag…││   60 │ // line 60                         │
│→ lang/registry.rs:4     use super::{Langu…││   61 │ // line 61                         │
│→ src/lib.rs:26          pub use lang::{La…││   62 │ // line 62                         │
│? unverified 1  1 file                     ││   63 │ // line 63                         │
│∅ src/lib.rs:41          Language::new()   ││   64 │ pub trait Language: Send + Sync {  │
└───────────────────────────────────────────┘│   65 │     fn name(&self) -> &str;        │
┌ definition ───────────────────────────────┐│   66 │     fn extensions(&self) -> &[&str…│
│ pub trait Language: Send + Sync {         ││   67 │ }                                  │
│     fn name(&self) -> &str;               ││   68 │ // line 68                         │
│     fn extensions(&self) -> &[&str];      ││   69 │ // line 69                         │
│ }                                         ││   70 │ // line 70                         │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
 search r rename  m/M move file/symbol  w rewrite  o declaration  R relation  s kind  L la
