crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_search_anchored_unresolved.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ──────────────────────────────── ● trait Language  ✓ 3  ? 1  ✗ 0  3 files ┐
│> Language                                                                              │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ ●  trait Language ────────────────────────┐┌ src/lib.rs ───────────────────────────────┐
│? unverified 1  1 file                     ││→ ● trait Language   lang/mod.rs:64        │
│∅ src/lib.rs:41          Language::new()   ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘│                                           │
┌ definition ───────────────────────────────┐│                                           │
│ Cannot follow this reference yet          ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
 search r rename  m/M move file/symbol  w rewrite  o declaration  R relation  s kind  L la
