crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_search_definition.snap
---
source: crates/vvv-tui/src/tests.rs
expression: render(&m)
---
┌ vvv ~/dev/nx ──────────────────────────────────────────── ● trait Language  definition ┐
│> Language                                                                              │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ ●  trait Language ────────────────────────┐┌ lang/mod.rs ──────────────────────────────┐
│src/lang/mod.rs:64:11                      ││    1 │ // line 1                          │
│    64 │ pub trait Language: Send + Sync { ││    2 │ // line 2                          │
│       │           ^^^^^^^^                ││    3 │ // line 3                          │
│                                           ││    4 │ // line 4                          │
│● trait Language                           ││    5 │ // line 5                          │
│← 1                                        ││    6 │ // line 6                          │
│  src/lib.rs                               ││    7 │ // line 7                          │
│                                           ││    8 │ // line 8                          │
│                                           ││    9 │ // line 9                          │
│                                           ││   10 │ // line 10                         │
│                                           ││   11 │ // line 11                         │
│                                           ││   12 │ // line 12                         │
│                                           ││   13 │ // line 13                         │
│                                           ││   14 │ // line 14                         │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
 search r rename  m/M move file/symbol  w rewrite  o declaration  R relation  s kind  L la
